cot/tests/snapshots/migrations/db__migration_engine_rollback_includes_dependent_apps.snap
---
source: cot/tests/db.rs
expression: dry_run_output
---
Rollback dry run

Target:
  app:       rollback_app1
  migration: 0001
  mode:      exclusive (target migration remains applied)

Rollback plan:
  1. rollback_dependent::m_0001_initial
  2. rollback_app1::m_0002_second

Summary:
  to roll back:     2
  skipped:          0
  database changes: none
