cot/tests/snapshots/migrations/db__migration_engine_rollback_single_app-2.snap
---
source: cot/tests/db.rs
expression: rollback_output
---
[1m[95mRolling Back[0m Migration rollback_app1::m_0003_third
[1m[35m Rolled Back[0m Migration rollback_app1::m_0003_third
[1m[95mRolling Back[0m Migration rollback_app1::m_0002_second
[1m[35m Rolled Back[0m Migration rollback_app1::m_0002_second
